--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "rc-banner-anim": "^2.4.5",
     "rc-queue-anim": "^2.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
